# Stock-Trader-Agent

./: .gitignore  README.md  app.py  pyproject.toml
src/stock_trade_crew/: crew.py  main.py
src/stock_trade_crew/config/: agents.yaml  tasks.yaml
src/stock_trade_crew/tools/: custom_tool.py  get_stock_price.py
